test(jacoco): update Maven config for Java Code Coverage library #18